src-tauri/tests/snapshots/pipeline_scenarios__merge_streaming_flag_from_latest.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 2
  content:
    - type: text
      text: done
    - type: text
      text: streaming...
  status:
    type: complete
    reason: stop
  streaming: true
