src-tauri/tests/snapshots/pipeline_scenarios__opencode_running_tool_renders_output.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: Bash
      tool_call_id: c1
      args_keys:
        - command
      args_text_length: 23
      has_result: true
      result_kind: string
      result_preview: hi
      streaming_status: running
  status: ~
  streaming: ~
