src-tauri/tests/snapshots/pipeline_scenarios__opencode_session_error_notice_round_trips.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: system-notice
      severity: error
      label: OpenCode error
      body: Quota exceeded. Try again in 5 hours.
  status: ~
  streaming: ~
