src-tauri/tests/snapshots/pipeline_scenarios__res_duration_long.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: r1
  content_length: 1
  content:
    - type: text
      text: 2m 5s
  status: ~
  streaming: ~
